crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.5.0__dynamic_array_declaration__array_assignment_compat.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.type.array_incompat] 20:13..20:13: incompatible array types: cannot assign `int [3]` to `int [5]`
  error[lyra.type.array_incompat] 27:11..27:11: incompatible array types: cannot assign `logic [7:0] []` to `int []`
---
unit (0 diagnostics)
