crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.5.0__dynamic_array_declaration__new_constructor.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.type.new_expr_not_dyn_array] 20:15..20:15: new[] can only initialize a dynamic array
  error[lyra.type.new_expr_size_negative] 26:13..26:13: new[] size must be non-negative
---
unit (0 diagnostics)
